Correct lint warnings.