@@ -24,8 +24,8 @@ public class UrlSuggestionItemComparator implements Comparator<UrlSuggestionItem
 
 	@Override
 	public int compare(UrlSuggestionItem object1, UrlSuggestionItem object2) {
-		Float value1 = new Float(object1.getNote());
-		Float value2 = new Float(object2.getNote());
+		Float value1 = Float.valueOf(object1.getNote());
+		Float value2 = Float.valueOf(object2.getNote());
 		return value2.compareTo(value1);
 	}
 
